# srt_maker

./: .gitignore  README.md  build.py  pyproject.toml  srt_maker.spec
docs/superpowers/plans/: 2026-05-26-srt-maker-core.md  2026-05-26-srt-maker-ui.md  2026-05-28-packaging-implementation.md  2026-05-28-subtitle-burn.md
docs/superpowers/specs/: 2026-05-26-srt-maker-design.md  2026-05-27-ffmpeg-path-config-design.md  (+3 more)
srt_maker/: main.py
srt_maker/audio/: extractor.py  vad.py
srt_maker/core/: config.py  logger.py  subtitle_list.py  subtitle_model.py  timecode.py
srt_maker/io/: ass_parser.py  srt_parser.py
srt_maker/speech/: base.py  cloud_recognizer.py  qwen_asr_recognizer.py  whisper_recognizer.py
srt_maker/ui/: burn_worker.py  log_bridge.py  log_viewer.py  main_window.py  recognition_worker.py  settings_dialog.py  style_panel.py  subtitle_editor.py  video_preview.py  waveform_view.py
srt_maker/video/: burner.py  ffmpeg_wrapper.py
tests/audio/: test_extractor.py  test_vad.py
tests/core/: test_config.py  test_logger.py  test_subtitle_list.py  test_subtitle_model.py  test_timecode.py
tests/io/: test_ass_parser.py  test_srt_parser.py
tests/speech/: test_base.py  test_cloud_recognizer.py  test_qwen_asr_recognizer.py  test_whisper_recognizer.py
tests/ui/: test_burn_worker.py  test_log_bridge.py  test_log_viewer.py  test_main_window.py  test_recognition_worker.py  test_settings_dialog.py  test_style_panel.py  test_subtitle_editor.py  test_video_preview.py  test_waveform_view.py
tests/video/: test_burner.py  test_ffmpeg_wrapper.py
