[project]
name = "srt-maker"
version = "0.1.0"
description = "视频字幕生成与烧录工具"
requires-python = ">=3.10"
dependencies = [
    "pyside6>=6.6",
    "opencv-python>=4.8",
    "pyqtgraph>=0.13",
    "openai-whisper>=20231106",
    "torch>=2.0",
    "ffmpeg-python>=0.2",
    "requests>=2.31",
    "silero-vad>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "pyinstaller>=6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
